--- a/core/res/res/values/pixeldust_symbols.xml
+++ b/core/res/res/values/pixeldust_symbols.xml
@@ -138,4 +138,8 @@
 
   <java-symbol type="array" name="config_vendorPlatformSignatures" />
 
+  <!-- Notification light mappings -->
+  <java-symbol type="array" name="notification_light_package_mapping" />
+  <java-symbol type="integer" name="config_deviceLightCapabilities" />
+
 </resources>
