--- a/core/res/res/values/pixeldust_colors.xml
+++ b/core/res/res/values/pixeldust_colors.xml
@@ -31,4 +31,7 @@
     <color name="power_menu_lock">@*android:color/accent_device_default_light</color>
     <color name="power_menu_settings">@*android:color/accent_device_default_light</color>
 
+    <!-- Resolver -->
+    <color name="resolver_list_bg">@android:color/white</color>
+
 </resources>
