fwb: Add vendor platform signature overlay
Change-Id: I7e2daaaad194536d0e4fab4edcfb570d3038e10b
Signed-off-by: Joe Maples <joe@frap129.org>
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/core/res/res/values/pixeldust_symbols.xml
+++ b/core/res/res/values/pixeldust_symbols.xml
@@ -136,4 +136,6 @@
     <!-- Whether device has a physical display cutout -->
     <java-symbol type="bool" name="config_physicalDisplayCutout" />
 
+  <java-symbol type="array" name="config_vendorPlatformSignatures" />
+
 </resources>
