--- a/core/res/res/values/pixeldust_config.xml
+++ b/core/res/res/values/pixeldust_config.xml
@@ -80,4 +80,9 @@
     <!-- Whether device has a physical display cutout -->
     <bool name="config_physicalDisplayCutout">false</bool>
 
+    <!-- The list of vendor package signatures that should also be considered
+       platform signatures, specifically for use on devices with a vendor partition. -->
+    <string-array name="config_vendorPlatformSignatures">
+    </string-array>
+
 </resources>
