Fix notification overlay config
for notification overlays to correctly tint notification texts
we must add a way they can override whatever is in the primary
overlay

to make things easier we only use one for both
config_useDarkBgNotificationIconTextTinting
and config_enableNightMode since they are never
used different anyway

notification overlays need to use
<bool name="config_notificationTinting_override">true</bool>
and can then use config_useDarkBgNotificationTinting_override
which will be used instead of both the other configs
above

Change-Id: Ifdd0a9567f8d8fdd7d81baffe65ca7ff8a502d05
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/core/res/res/values/pixeldust_symbols.xml
+++ b/core/res/res/values/pixeldust_symbols.xml
@@ -98,4 +98,9 @@
     <!-- Wallpaper component -->
     <java-symbol type="string" name="default_wallpaper_component_custom" />
 
+    <!-- Forcefully tint notification icon text -->
+    <java-symbol type="bool" name="config_useDarkBgNotificationIconTextTinting" />
+    <java-symbol type="bool" name="config_useDarkBgNotificationTinting_override" />
+    <java-symbol type="bool" name="config_notificationTinting_override" />
+
 </resources>
