--- a/core/res/res/values/pixeldust_config.xml
+++ b/core/res/res/values/pixeldust_config.xml
@@ -52,4 +52,10 @@
     <!-- Wallpaper component -->
     <string name="default_wallpaper_component_custom" translatable="false">@null</string>
 
+    <!-- True if the notification's dynamic app icon/title tint should be optimised for dark
+    backgrounds (requires config_allowNotificationIconTextTinting to be true)-->
+    <bool name="config_useDarkBgNotificationIconTextTinting">false</bool>
+    <bool name="config_useDarkBgNotificationTinting_override">false</bool>
+    <bool name="config_notificationTinting_override">false</bool>
+
 </resources>
