--- a/core/res/res/values/pixeldust_symbols.xml
+++ b/core/res/res/values/pixeldust_symbols.xml
@@ -124,4 +124,7 @@
     <!-- Screen off delay -->
     <java-symbol type="integer" name="config_screen_off_delay" />
 
+    <!-- Flashlight proximity check -->
+    <java-symbol type="integer" name="config_flashlightProximityTimeout" />
+
 </resources>
