Change default wallpaper component name
Reason for this change is the same for why we changed the gesture
settings config, to avoid issues with the vendor partition on devices
like the Pixel 3/3XL. Instead of recompiling a vendor and having users
flash this 'special' one every time they use DU, we figured this is
best course of action.

The problem that led to this was that Google was overriding the default
wallpaper component string to show some shitty live wallpaper. We don't
want that. We want our default wallpaper to show.

Change-Id: Ic3ba6e0485ae91c041633768babefe19d49ea142
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/core/res/res/values/pixeldust_symbols.xml
+++ b/core/res/res/values/pixeldust_symbols.xml
@@ -95,4 +95,7 @@
     <java-symbol type="bool" name="config_haveHigherAspectRatioScreen" />
     <java-symbol type="dimen" name="config_screenAspectRatio" />
 
+    <!-- Wallpaper component -->
+    <java-symbol type="string" name="default_wallpaper_component_custom" />
+
 </resources>
