--- a/core/res/res/values/pixeldust_config.xml
+++ b/core/res/res/values/pixeldust_config.xml
@@ -49,4 +49,7 @@
     <bool name="config_haveHigherAspectRatioScreen">false</bool>
     <item name="config_screenAspectRatio" format="float" type="dimen">2.1</item>
 
+    <!-- Wallpaper component -->
+    <string name="default_wallpaper_component_custom" translatable="false">@null</string>
+
 </resources>
