[1/2] LS Clocks: Let's add a new gradients designs
Change-Id: Ice22ffe12273ad4a15e23cb95926c327606604d4
Signed-off-by: Arghya Chanda <arghyac35@gmail.com>
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/core/res/res/values/pixeldust_symbols.xml
+++ b/core/res/res/values/pixeldust_symbols.xml
@@ -118,4 +118,7 @@
     <java-symbol type="color" name="autofill_save_title_color" />
     <java-symbol type="color" name="autofill_autofill_save_custom_subtitle_color" />
 
+    <!-- Custom gradients designs -->
+    <java-symbol type="color" name="custom_accent_gradient_end_color" />
+
 </resources>
