--- a/core/res/res/values/pixeldust_colors.xml
+++ b/core/res/res/values/pixeldust_colors.xml
@@ -86,4 +86,7 @@
     <color name="autofill_save_title_color">@color/primary_text_default_material_light</color>
     <color name="autofill_autofill_save_custom_subtitle_color">@color/primary_text_default_material_light</color>
 
+    <!-- Custom gradients designs -->
+    <color name="custom_accent_gradient_end_color">#00000000</color>
+
 </resources>
