fwb: Add hide notch support [1/3]
Change-Id: I3bd8683294d9fd6a71322ceabe132345d128b5dc
Signed-off-by: spezi77 <spezi7713@gmx.net>

--- a/core/res/res/values/pixeldust_config.xml
+++ b/core/res/res/values/pixeldust_config.xml
@@ -77,4 +77,7 @@
     <!-- Pocket Lock -->
     <bool name="config_pocketModeSupported">true</bool>
 
+    <!-- Whether device has a physical display cutout -->
+    <bool name="config_physicalDisplayCutout">false</bool>
+
 </resources>
