--- a/core/res/res/values/pixeldust_symbols.xml
+++ b/core/res/res/values/pixeldust_symbols.xml
@@ -133,4 +133,7 @@
     <!-- Pocket Lock -->
     <java-symbol type="bool" name="config_pocketModeSupported" />
 
+    <!-- Whether device has a physical display cutout -->
+    <java-symbol type="bool" name="config_physicalDisplayCutout" />
+
 </resources>
