--- a/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
+++ b/packages/SystemUI/res/layout/quick_status_bar_header_system_icons.xml
@@ -47,7 +47,7 @@
         android:gravity="center_vertical|center_horizontal" />
 
     <com.android.systemui.statusbar.NetworkTraffic
-        android:id="@+id/networkTraffic"
+        android:id="@+id/network_traffic"
         android:paddingEnd="@dimen/status_bar_left_clock_end_padding"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
