--- a/core/res/res/values/pixeldust_config.xml
+++ b/core/res/res/values/pixeldust_config.xml
@@ -133,4 +133,11 @@
     <integer name="config_buttonBrightnessSettingDefault">255</integer>
     <bool name="config_deviceHasVariableButtonBrightness">false</bool>
 
+    <!-- Extended Boosts for QPerformance -->
+    <!-- Whether cpu boost is enabled right after boot -->
+    <bool name="config_enableCpuBoostOnBoot">false</bool>
+    <!-- Duration of the boost in seconds, default is 30 -->
+    <integer name="onbootboost_duration">0</integer>
+    <!-- Boost parameters which get passed to QPerformance -->
+    <integer-array name="onbootboost_param_value"/>
 </resources>
