--- a/core/res/res/values/pixeldust_symbols.xml
+++ b/core/res/res/values/pixeldust_symbols.xml
@@ -174,7 +174,12 @@
     <java-symbol type="bool" name="config_filterDisplayModes" />
     <java-symbol type="array" name="config_displayModeMappings" />
 
-  <java-symbol type="integer" name="config_buttonBrightnessSettingDefault" />
-  <java-symbol type="bool" name="config_deviceHasVariableButtonBrightness" />
+    <java-symbol type="integer" name="config_buttonBrightnessSettingDefault" />
+    <java-symbol type="bool" name="config_deviceHasVariableButtonBrightness" />
 
+    <!-- Extended Boosts for QPerformance -->
+    <!-- cpu boost on boot -->
+    <java-symbol type="bool" name="config_enableCpuBoostOnBoot" />
+    <java-symbol type="integer" name="onbootboost_duration" />
+    <java-symbol type="array" name="onbootboost_param_value" />
 </resources>
